--- a/student.ipynb
+++ b/student.ipynb
@@ -7,20 +7,326 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
+    "* Student name: Candy Gudda\n",
+    "* Student pace: Full time\n",
+    "* Scheduled project review date/time: Friday 15th September, 12 noon\n",
+    "* Instructor name: Nikita Njoroge, Samuel Karu, Lucille Kaleha, Diana Mongina \n",
     "* Blog post URL:\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Importing Libraries\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
+    "# Your code here - remember to use markdown cells for comments as well!\n",
+    "#Importing libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "conn = sqlite3.connect(\"zippedData\\im.db\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 1.1 Loading datasets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>name</th>\n",
+       "      <th>tbl_name</th>\n",
+       "      <th>rootpage</th>\n",
+       "      <th>sql</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_basics</td>\n",
+       "      <td>movie_basics</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CREATE TABLE \"movie_basics\" (\\n\"movie_id\" TEXT...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>table</td>\n",
+       "      <td>directors</td>\n",
+       "      <td>directors</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CREATE TABLE \"directors\" (\\n\"movie_id\" TEXT,\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>table</td>\n",
+       "      <td>known_for</td>\n",
+       "      <td>known_for</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CREATE TABLE \"known_for\" (\\n\"person_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_akas</td>\n",
+       "      <td>movie_akas</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CREATE TABLE \"movie_akas\" (\\n\"movie_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>table</td>\n",
+       "      <td>movie_ratings</td>\n",
+       "      <td>movie_ratings</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CREATE TABLE \"movie_ratings\" (\\n\"movie_id\" TEX...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>table</td>\n",
+       "      <td>persons</td>\n",
+       "      <td>persons</td>\n",
+       "      <td>7</td>\n",
+       "      <td>CREATE TABLE \"persons\" (\\n\"person_id\" TEXT,\\n ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>table</td>\n",
+       "      <td>principals</td>\n",
+       "      <td>principals</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CREATE TABLE \"principals\" (\\n\"movie_id\" TEXT,\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>table</td>\n",
+       "      <td>writers</td>\n",
+       "      <td>writers</td>\n",
+       "      <td>9</td>\n",
+       "      <td>CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    type           name       tbl_name  rootpage  \\\n",
+       "0  table   movie_basics   movie_basics         2   \n",
+       "1  table      directors      directors         3   \n",
+       "2  table      known_for      known_for         4   \n",
+       "3  table     movie_akas     movie_akas         5   \n",
+       "4  table  movie_ratings  movie_ratings         6   \n",
+       "5  table        persons        persons         7   \n",
+       "6  table     principals     principals         8   \n",
+       "7  table        writers        writers         9   \n",
+       "\n",
+       "                                                 sql  \n",
+       "0  CREATE TABLE \"movie_basics\" (\\n\"movie_id\" TEXT...  \n",
+       "1  CREATE TABLE \"directors\" (\\n\"movie_id\" TEXT,\\n...  \n",
+       "2  CREATE TABLE \"known_for\" (\\n\"person_id\" TEXT,\\...  \n",
+       "3  CREATE TABLE \"movie_akas\" (\\n\"movie_id\" TEXT,\\...  \n",
+       "4  CREATE TABLE \"movie_ratings\" (\\n\"movie_id\" TEX...  \n",
+       "5  CREATE TABLE \"persons\" (\\n\"person_id\" TEXT,\\n ...  \n",
+       "6  CREATE TABLE \"principals\" (\\n\"movie_id\" TEXT,\\...  \n",
+       "7  CREATE TABLE \"writers\" (\\n\"movie_id\" TEXT,\\n  ...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#loading datasets\n",
+    "pd.read_sql(\"SELECT* FROM sqlite_master;\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>studio</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>foreign_gross</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alice in Wonderland (2010)</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>334200000.0</td>\n",
+       "      <td>691300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Harry Potter and the Deathly Hallows Part 1</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>296000000.0</td>\n",
+       "      <td>664300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>292600000.0</td>\n",
+       "      <td>535700000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shrek Forever After</td>\n",
+       "      <td>P/DW</td>\n",
+       "      <td>238700000.0</td>\n",
+       "      <td>513900000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         title studio  domestic_gross  \\\n",
+       "0                                  Toy Story 3     BV     415000000.0   \n",
+       "1                   Alice in Wonderland (2010)     BV     334200000.0   \n",
+       "2  Harry Potter and the Deathly Hallows Part 1     WB     296000000.0   \n",
+       "3                                    Inception     WB     292600000.0   \n",
+       "4                          Shrek Forever After   P/DW     238700000.0   \n",
+       "\n",
+       "  foreign_gross  year  \n",
+       "0     652000000  2010  \n",
+       "1     691300000  2010  \n",
+       "2     664300000  2010  \n",
+       "3     535700000  2010  \n",
+       "4     513900000  2010  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_gross_df = pd.read_csv(\"zippedData/bom.movie_gross.csv\")\n",
+    "movie_gross_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1560 entries, 0 to 1559\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   id            1560 non-null   int64 \n",
+      " 1   synopsis      1498 non-null   object\n",
+      " 2   rating        1557 non-null   object\n",
+      " 3   genre         1552 non-null   object\n",
+      " 4   director      1361 non-null   object\n",
+      " 5   writer        1111 non-null   object\n",
+      " 6   theater_date  1201 non-null   object\n",
+      " 7   dvd_date      1201 non-null   object\n",
+      " 8   currency      340 non-null    object\n",
+      " 9   box_office    340 non-null    object\n",
+      " 10  runtime       1530 non-null   object\n",
+      " 11  studio        494 non-null    object\n",
+      "dtypes: int64(1), object(11)\n",
+      "memory usage: 146.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie_info_df = pd.read_csv(\"zippedData/rt.movie_info.tsv\", delimiter= \"\\t\" , encoding= \"latin1\")\n",
+    "movie_info_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style ='text-align:center'>\n",
+    "  <img src='https://raw.githubusercontent.com/learn-co-curriculum/dsc-phase-1-project-v2-4/master/movie_data_erd.jpeg'>\n",
+    "</div>"
    ]
   }
  ],
@@ -40,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
